<resources>
    <string name="app_name">HOP OR DROP</string>
    <string name="facebook_app_id">1789979874549658</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">7e395ab6c3a6753cae870eb261efdf69</string>
    <string name="ak_login_protocol_scheme">ak1789979874549658</string>
    <string name="BASE_SERVICE_URL">http://192.168.0.8:8080/services/</string>
    <string name="TRACK_URL">http://192.173.2.23/pages/troofy/t/t.xhtml</string>
    <string name="ALERT_URL">http://192.173.2.23/pages/troofy/a/a.xhtml</string>
    <string name="welcome">WELCOME!</string>
    <string name="title_activity_pool_main">HOP OR DROP</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="no_network_msg">Oops! Please check your internet.</string>
    <string name="try_again">Try again</string>
    <string name="cancel">Cancel</string>
    <string name="no_network">No network</string>
    <string name="logout">Logout</string>
    <string name="defaultAppPref">com.troofy.hopordrop.defaultPref</string>
    <string name="USER_FB_LOGIN_SAVE_URL">user/fblogin/save</string>
    <string name="PICKUP_REQUEST_URL">pool/pickuprequest</string>
    <string name="PICKUP_REQUEST_LIST_URL">pool/pickuprequest/list</string>
    <string name="CONFIRM_TRIP_URL">pool/pickuprequest/confirm</string>
    <string name="SAVE_VERIFY_EMAIL_URL">network/channel/verifyemail</string>
    <string name="GET_TRIP_DETAILS">pool/trip/fetch</string>
    <string name="GET_USER_CHANNEL_DETAILS">network/channel/details</string>
    <string name="CANCEL_PICKUPREQUEST">pool/pickuprequest/cancel</string>
    <string name="CANCEL_TRIP">pool/trip/cancel</string>
    <string name="UPDATE_LOCATION">user/location/update</string>
    <string name="TRIP_UPDATE_LOCATION">pool/trip/location/update</string>
    <string name="ALERT_UPDATE_LOCATION">pool/alert/location/update</string>
    <string name="POST_MSG">user/message/post</string>
    <string name="GET_MSG">user/message/get</string>
    <string name="CHECK_USER_IN_SYSTEM">user/exists</string>
    <string name="SAVE_ALERT">pool/trip/alert/save</string>
    <string name="FB_TOKEN_UPDATE_URL">user/fblogin/update</string>
    <string name="PICKREQ_REQUEST">pool/pickuprequest/fetch</string>
    <string name="USER_STATUS">user/current/status</string>
    <string name="MUTUAL_CONN">user/mutual/connections</string>
    <string name="SAVE_PATH">pool/path/save</string>
    <string name="FETCH_PATH_LIST">pool/path/list/fetch</string>
    <string name="DELETE_PATH">pool/path/delete</string>
    <string name="title_activity_error">Oops!</string>
    <string name="title_activity_ask_ride">REQUEST A HOP!</string>
    <string name="title_activity_give_ride">HOP requests near you...</string>
    <string name="drop">Drop:</string>
    <string name="enter_dest">Enter Destination</string>
    <string name="title_activity_user_detail_activity">CONFIRM DETAILS!</string>
    <string name="title_activity_pick_details">Confirm Drop</string>
    <string name="dateTimeFormat">MMM d, h:mm a</string>
    <string name="requestedAt">Requested on</string>
    <string name="title_activity_pick_up_details">HOP REQUESTED!</string>
    <string name="title_activity_trip">Trip is running</string>
    <string name="title_activity_chat">Chat</string>
    <string name="save">Save</string>
    <string name="hopExpired">HOP Request Expired!</string>
    <string name="pickIdStr">pickID</string>
    <string name="tripIdStr">tripID</string>
    <string name="pickReqTime">pickReqTime</string>
    <string name="pickAddressStr">pickAddress</string>
    <string name="dropAddressStr">dropAddress</string>
    <string name="pickLatStr">pickLat</string>
    <string name="pickLngStr">pickLng</string>
    <string name="dropLatStr">dropLat</string>
    <string name="dropLngStr">dropLng</string>
    <string name="shareTitle">\nHey! Check the coolest ride sharing app. It is real-time, simple and powerful.\n\n</string>
    <string name="marketAppURL">https://play.google.com/store/apps/details?id=com.troofy.hopordrop</string>
    <string name="termsLink">&lt;a href=http://www.hopordrop.com/pages/troofy/terms/terms.xhtml&gt;Terms&lt;/a&gt;</string>
    <string name="policyLink">&lt;a href=http://www.hopordrop.com/pages/troofy/privacy/privacy.xhtml&gt;Policies&lt;/a&gt;</string>
    <string name="mainLink">&lt;a href=http://www.hopordrop.com&gt;www.hopordrop.com&lt;/a&gt;</string>
    <string name="faqLink">&lt;a href=http://www.hopordrop.com/pages/troofy/faq/faq.xhtml&gt;FAQs&lt;/a&gt;</string>
    <string name="token">token</string>
    <string name="chatAuthIDStr">chatAuthID</string>
    <string name="chatNameStr">chatName</string>
    <string name="gps_network_not_enabled">Location Service is not enabled</string>
    <string name="open_location_settings">Enable Location</string>
    <string name="app_name_short">HopOrDrop</string>
    <string name="expire_after_15_mins">[HOP request will auto expire after 15 mins]</string>
    <string name="notify_hop_msg">We will notify you once your HOP is accepted.</string>
    <string name="loading_data">Loading HOP requests near you...</string>
    <string name="more_info">For more information visit </string>
    <string name="no_hop_reqs">No HOP requests available</string>
    <string name="noty_count">noty_count</string>
    <string name="share_txt">Take advantage of our features, invite your friends.</string>
    <string name="tap_to_share">[ TAP TO SHARE ]</string>
    <string name="share_using">Share using...</string>
    <string name="problem_cancel_hop">Problem in cancelling HOP. Try again.</string>
    <string name="hop_cancelled">HOP cancelled!</string>
    <string name="request_a_hop">REQUEST  A  HOP</string>
    <string name="tag_line">JUST TAG ALONG</string>
    <string name="err_generic_msg">Something went wrong.</string>
    <string name="contact1">Contact 1</string>
    <string name="contact2">Contact 2</string>
    <string name="contactname1">contactName1</string>
    <string name="contactnumber1">contactNumber1</string>
    <string name="contactname2">contactName2</string>
    <string name="contactnumber2">contactNumber2</string>
    <string name="emgAlert">Emergency SOS!</string>
    <string name="tripLocationPoll">isTripLocationPollSet</string>
    <string name="alertLocationPoll">isAlertLocationPollSet</string>
    <string name="tripEnded">Trip ended!</string>
    <string name="tripKeyStr">tripKey</string>
    <string name="trackTxt">Please track my trip at &#160;</string>
    <string name="alertSent">Alert SOS Sent!</string>
    <string name="smsFail">SMS failed, please try again!</string>
    <string name="tapToAddEmgCont">Tap to add - Emergency contact</string>
    <string name="processTrip">Processing trip</string>
    <string name="wait">Please wait...</string>
    <string name="endingTrip">Ending your Trip</string>
    <string name="sendSOS">Send SOS emergency SMS to your contacts?\n(Service charges might be applied)</string>
    <string name="isAlertOn">isAlertOn</string>
    <string name="shareTrackTrip">Sharing my trip details! &#160;</string>
    <string name="alertSMSTxt">"Help me!My location "</string>
    <string name="sos_sent">SOS Sent!</string>
    <string name="alertID">alertID</string>
    <string name="alertCount" />
    <string name="oops_something_is_missing">Oops! Something is missing</string>
    <string name="internet_connection_is_down_or_slow">- Internet connection is down or slow</string>
    <string name="invalid_input_entered">- Invalid input entered</string>
    <string name="server_is_under_maintenance">- Server is under maintenance</string>
    <string name="sorry_for_the_inconvenience">Sorry for the inconvenience.</string>
    <string name="a_product_by_troofy_labs">A product by Troofy Labs</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="email">Email</string>
    <string name="full_name">Full name</string>
    <string name="next">N E X T</string>
    <string name="beta">[ BETA ]</string>
    <string name="shareTxtLine2">And watch our algorithms will do the magic!</string>
    <string name="your_friends_are_not_using_hop_or_drop">We couldn\'t find your friends near you.</string>
    <string name="fix_this_problem">What you can do :-</string>
    <string name="_1_invite_friends_and_watch_the_magic">1. Invite more friends</string>
    <string name="or">OR</string>
    <string name="_2_make_your_hop_requests_as_public">2. Make your HOP request public</string>
</resources>