<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*************************************************************************
  ~  *
  ~  * TROOFY LABS - CONFIDENTIAL
  ~  * __________________
  ~  *  Copyright (c) 2017.
  ~  *
  ~  *  All Rights Reserved.
  ~  *
  ~  * NOTICE:  All information contained herein is, and remains
  ~  * the property of Troofy Labs(OPC) Private Limited and its suppliers,
  ~  * if any.  The intellectual and technical concepts contained
  ~  * herein are proprietary to Troofy Labs(OPC) Private Limited
  ~  * and its suppliers and may be covered by U.S. and Foreign Patents,
  ~  * patents in process, and are protected by trade secret or copyright law.
  ~  * Dissemination of this information or reproduction of this material
  ~  * is strictly forbidden unless prior written permission is obtained
  ~  * from Troofy Labs(OPC) Private Limited.
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"
        android:weightSum="10">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_friends_are_not_using_hop_or_drop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:text="@string/fix_this_problem"/>

            <TextView
                android:layout_marginTop="@dimen/top_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_invite_friends_and_watch_the_magic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_margin"
                android:text="@string/or"/>

            <TextView
                android:layout_marginBottom="@dimen/bottom_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2_make_your_hop_requests_as_public"/>


        </LinearLayout>



    </LinearLayout>



</LinearLayout>