<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"
        android:layout_marginTop="33dp"
        android:orientation="vertical"
        android:weightSum="1">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_txt"
            android:id="@+id/textView7"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/top_margin"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shareTxtLine2"
            android:id="@+id/textView9"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/top_margin"
            android:textColor="@color/black"/>



        <ImageView
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:id="@+id/shareImg"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_share_black_48dp"
            android:layout_weight="0.21" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="9sp"
            android:text="@string/tap_to_share"
            android:id="@+id/textView8"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>

</LinearLayout>
