<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/textView3" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beta"
            android:layout_marginTop="0dp"
            android:textColor="@color/base"
            android:layout_gravity="center"
            android:id="@+id/betaTxt2"
            android:textSize="6dp"
            android:layout_marginBottom="6dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/itemtitle"
            android:text="@string/a_product_by_troofy_labs"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:layout_marginBottom="33dp"
            android:id="@+id/textView4" />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rate us"
            android:id="@+id/rateBtn"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"
            android:background="@color/goGreen"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Like us on Facebook"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/fbFollowBtn"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin"
            android:background="#006cb4" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Follow us on Twitter"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/twitterFollBtn"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin"
            android:background="#62bdff" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/top_margin"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Useful links"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/faqUrl"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/termsUrl"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/policyUrl"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textStyle="bold|italic"
                android:text="@string/more_info"
                android:textColor="@color/black"
                android:layout_marginTop="33dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textStyle="bold|italic"
                android:id="@+id/siteURL"
                />

        </LinearLayout>







    </LinearLayout>

</LinearLayout>